# dutyproject

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
dutyapp/: admin.py  apps.py  forms.py  middleware.py  models.py  serializers.py  tests.py  views.py
dutyapp/management/commands/: recalculate_schedules.py
dutyapp/migrations/: 0001_initial.py
dutyapp/templates/dutyapp/: config_detail.html  config_list.html  create_config.html  delete_config.html  edit_config.html  full_schedule.html  send_code.html  verify_code.html
dutyapp/templates/widgets/: first_weekday_overrides.html  second_weekday_overrides.html
dutyproject/: asgi.py  settings.py  urls.py  wsgi.py
src/: schedule_generator.py  slack.py  widgets.py
